added database to asure

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,6 @@
 {
   "DBInfo":{
     "Name":"MySQLconnect",
-    "ConnectingString":"server=localhost;database=cSharpBelt;port=3306; userid=root;password=root12;SslMode=None"
+    "ConnectingString":"server=127.0.0.1;database=cSharpBelt;port=50773; userid=root;password=root12;SslMode=None"
   }
 }
